--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://.github.io/my-app",
   "name": "reactboom",
   "version": "1.0.0",
   "description": "This is React -Boom by Abhishek Ojha",
